stack overflow input margin fix

--- a/public/content_scripts/App.css
+++ b/public/content_scripts/App.css
@@ -30,6 +30,7 @@
 
 #yuedu-flex-container > .word > input {
     flex: 1 0 20px;
+    margin: 0;
 }
 
 #yuedu-flex-container > .pronounce {
